Squashed 'user-facing-backend/Express-Typescipt/' changes from 19eade6..8ebb283
8ebb283 Merge pull request #8 from arsalanator/project-bootstrapping
bcf3ecd Bootstrapping: made modules to be esnext in tsconfig.json
28d6d7d Bootstrapping: added tsconfig.json file for user-facing-frontend
e3d1f19 Bootsrapping: added project structures for all database projects
6b2eb2a Bootstrapping: added .vscode folder at root
4b58d6b Bootstrapping: added tsconfig.json file to all database projects
870dadc Bootstrapping: added .vscode folder in all projects
62ba41d Bootstrapping: added prettier and formatting scripts and configuration
5b2627f Added local utility files into .gitignore
6efafa5 Merge commit 'aa319762c25deec99294ba93e0d382d2b9476091'
aa31976 Squashed 'databases/transactions-database/Mysql-TypeORM-Typescript/' changes from 4627b18..19eade6
296174f Merge commit '374431287a360ea8ca1c5332d9119cad5603cf08'
3744312 Squashed 'databases/content-database/Mongodb-Mongoose-Typescript/' changes from e94ef24..19eade6
1fc9976 Merge commit 'a398b3153caa3cc4264a078d2b79659724866d87'
a398b31 Squashed 'databases/cache-database/Redis-IOredis-Typescript/' changes from 2557b61..19eade6
ba9ba30 Merge commit '6b440d35622ce7a91cd378af1c25f8483f784bac'
6b440d3 Squashed 'user-facing-frontend/React-Typescipt/' changes from ad04bfe..19eade6
839ac9e Merge commit '5ad6b3fc8cab72a89380e588a34f46cc83b17d0e'
5ad6b3f Squashed 'user-facing-backend/Express-Typescipt/' changes from 99f6915..19eade6

git-subtree-dir: user-facing-backend/Express-Typescipt
git-subtree-split: 8ebb28335da22bb1fa9dd6b7db3918801254556a

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+dist/
+coverage/
+build/
+
+user-facing-backend/Express-Typescipt/boostrapping.sh
+user-facing-frontend/React-Typescipt/bootstrap-the-folder-structure.sh
+user-facing-frontend/React-Typescipt/manually-create-folders-and-root-files.sh
+
+
+.DS_Store
 current_app_state.zip
 package-lock.json
 
