--- a/databases/transactions-database/Mysql-TypeORM-Typescript/package.json
+++ b/databases/transactions-database/Mysql-TypeORM-Typescript/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "user-facing-backend-for-appointment-system-with-Express-Typescipt",
+  "name": "mysql-typeorm-typescript",
   "version": "1.0.0",
-  "description": "This is backend for \"appointment system\" application being written in Express, Typescript",
+  "description": "This is database for transactional data for \"appointment system\" application being written using Mysql, TypeORM and Typescript",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
     "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev index.ts",
+    "typeorm": "typeorm-ts-node-commonjs",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
@@ -15,14 +17,15 @@
     "check": "npm run lint && npm run format:check",
     "fix": "npm run lint:fix && npm run format"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
+  "dependencies": {
+    "typeorm": "^0.3.x",
+    "mysql2": "^3.x.x",
+    "dotenv": "^16.0.0"
+  },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
+    "typescript": "^5.x.x",
+    "@types/node": "^18.0.0",
+    "ts-node-dev": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
@@ -34,7 +37,7 @@
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-promise": "^6.1.1"
   },
-  "dependencies": {
-    "express": "^4.21.2"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "MIT"
 }
